Update some build with header to explain the check

--- a/build.xml
+++ b/build.xml
@@ -6,8 +6,9 @@
     <property name="basedir" value="${project.basedir}"/>
     <property name="project.name" value="Proclaim"/>
 
+    <!-- We try and verify that the build.properties file is created from the build.dist.properties -->
     <if>
-        <available file="build.properties" property="test_txt_exists" type="file"/>
+        <available file="build.properties" property="build_properties_exists" type="file"/>
         <then>
             <property file="build.properties"/>
         </then>
@@ -149,7 +150,8 @@
                     <property name="force" value="${stage_joomla"/>
                 </phingcall>
                 <!--Link Joomla to the webserver's root directory  -->
-                <symlink target="${basedir}/.joomla-dev" link="${builder.joomla_path}/${builder.joomla_dir}" overwrite="true"/>
+                <symlink target="${basedir}/.joomla-dev" link="${builder.joomla_path}/${builder.joomla_dir}"
+                         overwrite="true"/>
             </then>
         </if>
 
@@ -158,8 +160,10 @@
         <echo message="Linking component to Joomla!"/>
 
         <!-- Create symbolic links for a component in the Joomla directory -->
-        <symlink target="${basedir}/media" link="${builder.joomla_path}${builder.joomla_dir}/media/com_proclaim" overwrite="true"/>
-        <symlink target="${basedir}/admin" link="${builder.joomla_path}${builder.joomla_dir}/administrator/components/com_proclaim"
+        <symlink target="${basedir}/media" link="${builder.joomla_path}${builder.joomla_dir}/media/com_proclaim"
+                 overwrite="true"/>
+        <symlink target="${basedir}/admin"
+                 link="${builder.joomla_path}${builder.joomla_dir}/administrator/components/com_proclaim"
                  overwrite="true"/>
         <symlink target="${basedir}/site" link="${builder.joomla_path}${builder.joomla_dir}/components/com_proclaim"
                  overwrite="true"/>
@@ -179,21 +183,24 @@
 
     <!-- Set the default joomla path and create symbolic links -->
     <target name="dev.setup_Symbolic_Links">
-        
+
         <echo message="Joomla path set to: ${builder.joomla_path}${builder.joomla_dir}"/>
 
         <echo message="Linking component, modules, and plugins to Joomla!"/>
 
         <!-- Create symbolic links for component in the Joomla directory -->
-        <symlink target="${basedir}/media" link="${builder.joomla_path}${builder.joomla_dir}/media/com_proclaim" overwrite="true"/>
-        <symlink target="${basedir}/admin" link="${builder.joomla_path}${builder.joomla_dir}/administrator/components/com_proclaim"
+        <symlink target="${basedir}/media" link="${builder.joomla_path}${builder.joomla_dir}/media/com_proclaim"
+                 overwrite="true"/>
+        <symlink target="${basedir}/admin"
+                 link="${builder.joomla_path}${builder.joomla_dir}/administrator/components/com_proclaim"
                  overwrite="true"/>
         <symlink target="${basedir}/site" link="${builder.joomla_path}${builder.joomla_dir}/components/com_proclaim"
                  overwrite="true"/>
         <symlink target="${basedir}/modules/site/mod_proclaim"
                  link="${builder.joomla_path}${builder.joomla_dir}/modules/mod_proclaim" overwrite="true"/>
         <symlink target="${basedir}/modules/admin/mod_proclaimicon"
-                 link="${builder.joomla_path}${builder.joomla_dir}/administrator/modules/mod_proclaimicon" overwrite="true"/>
+                 link="${builder.joomla_path}${builder.joomla_dir}/administrator/modules/mod_proclaimicon"
+                 overwrite="true"/>
         <symlink target="${basedir}/modules/site/mod_proclaim_podcast"
                  link="${builder.joomla_path}${builder.joomla_dir}/modules/mod_proclaim_podcast" overwrite="true"/>
         <symlink target="${basedir}/plugins/finder/proclaim"
