--- a/composer.json
+++ b/composer.json
@@ -61,8 +61,7 @@
     "ext-zlib": "*",
     "ext-curl": "*",
     "ext-gd": "*",
-    "composer/ca-bundle": "^1.3.7",
-    "ext-http": "*"
+    "composer/ca-bundle": "^1.3.7"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.6.11",
