--- a/build.dist.properties
+++ b/build.dist.properties
@@ -6,4 +6,28 @@ builder.joomla_path=/path/to/server/htdocs/like/folder
 builder.joomla_dir=
 
 # Joomla version to run the unit tests against
-joomla.version=4.2.4
+joomla.version=5.2.3
+
+# Enter the sever host
+builder.host=localhost
+
+# Enter database host
+builder.db_host=localhost
+
+# Enter Database username
+builder.db_user=
+
+# Enter database password
+builder.db_pass=
+
+# Enter Database name
+builder.db_name=
+
+# Enter an initial Joomla username
+builder.joomla_username=
+
+# Enter an initial Joomla password
+builder.joomla_password=
+
+# Enter an initial Joomla email
+builder.joomla_email=example@example.com
