--- a/composer.json
+++ b/composer.json
@@ -55,18 +55,16 @@
     "typo3/phar-stream-wrapper": "^3.1.7",
     "ext-mbstring": "*",
     "jfcherng/php-diff": "^6.16.2",
-    "ext-simplexml": "*",
-    "ext-zip": "*",
     "ext-json": "*",
-    "ext-zlib": "*",
-    "ext-curl": "*",
+    "ext-simplexml": "*",
+    "psr/log": "^3.0.1",
     "ext-gd": "*",
     "composer/ca-bundle": "^1.3.7"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.6.11",
     "friendsofphp/php-cs-fixer": "3.*",
-    "squizlabs/php_codesniffer": "3.*",
+    "squizlabs/php_codesniffer": "^3.11",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7.2",
     "phan/phan": "^5.4.2",
     "roave/security-advisories": "dev-latest",
