--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <project name="proclaim" default="build" basedir=".">
+    <property file="build.properties" override="false"/>
     <autoloader autoloaderpath="${project.basedir}/libraries/vendor/autoload.php"/>
 
     <property name="basedir" value="${project.basedir}"/>
@@ -9,19 +9,6 @@
     <property name="config_path" value="${basedir}/tests/system/servers"/>
     <property name="src.test" value="${basedir}/tests/test"/>
     <property name="dest.test" value="${basedir}/admin/views/test"/>
-
-    <!-- We try and verify that the build.properties file is created from the build.dist.properties -->
-    <if>
-        <available file="build.properties" property="build_properties_exists" type="file"/>
-        <then>
-            <property file="build.properties"/>
-        </then>
-        <else>
-            <fail>-
-                Missing 'build.properties' file in the project root folder
-            </fail>
-        </else>
-    </if>
 
     <target name="init" description="Create artifact directories">
         <mkdir dir="${basedir}/build/reports"/>
@@ -85,7 +72,7 @@
         <delete file="${basedir}/admin/proclaim.script.php"/>
         <delete file="${basedir}/media/css/site/cwmcore.css"/>
     </target>
-    
+
     <!-- Set the default joomla path and create symbolic links -->
     <target name="dev.Setup_Symbolic_Links">
 
