--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,7 @@
 # Build properties for multiple use times
 # This property is required!
-builder.joomla_path=/Volumes/BCCExt_APFS_Extreme_Pro/Sites/j5-dev
+#builder.joomla_path=/Volumes/BCCExt_APFS_Extreme_Pro/Sites/j5-dev
+builder.joomla_path=/Volumes/BCCExt_APFS_Extreme_Pro/Sites/j6-dev
 
 # Staging directory if you use this.
 builder.joomla_dir=
